--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body id="body-bg">
   <div id="navbar" class="gjs-grid-row">
-    <div id="itjq" class="gjs-grid-column">
+    <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
         <div id="iqjl" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" /></div>
         <div id="iffs" class="gjs-grid-column">
