--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="iqjl" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" /></div>
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" /></div>
         <div id="iffs" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
             <div id="irtfd" class="gjs-grid-column"><a id="i88iz" href="#testimonial-section" title="" class="gjs-link">
