--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>AFAZ | Portfolio</title>
@@ -17,10 +17,10 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" /></div>
-        <div id="iffs" class="gjs-grid-column">
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"></div>
+        <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
-            <div id="irtfd" class="gjs-grid-column"><a id="i88iz" href="#testimonial-section" title="" class="gjs-link">
+            <div id="colnav" class="gjs-grid-column"><a id="i88iz" href="#testimonial-section" title="" class="gjs-link">
                 <div id="Text">
                   <div id="isaxis">About</div>
                 </div>
@@ -94,7 +94,8 @@
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
+        <!-- Controls -->
+         <button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
           class="carousel-control-prev gjs-draggable"><span id="izg80a"
             class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
           data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
@@ -106,7 +107,7 @@
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
         <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" /></a></div>
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">Pricing<br /></a><a
             id="ipjdtn" href="##" class="gjs-link">Terms &amp; Conditions<br /></a><a id="i2sl68" href="##"
             class="gjs-link">
