--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -47,7 +47,8 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong>Zaki</strong></span></h1>
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong>Zaki</strong></span>
+      </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
           <div id="ivm4u"><span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web
@@ -66,12 +67,16 @@
     <div id="i8w4i" class="gjs-grid-column">
       <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong>Past Projects</strong></h4>
       <h2 id="iiacm" class="gjs-heading">
-        <strong>Here are some of my <span id="icxfor" class="gjs-text-blue">Past Projects</span></strong></h2>
+        <strong>Here are some of my <span id="icxfor" class="gjs-text-blue">Past Projects</span></strong>
+      </h2>
       <!-- Bootstrap Carousel Starts Here -->
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable">
         <!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
+            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="2">Button</button>
         </div><!-- Carousel Inner -->
         <div id="ihh53" class="carousel-inner gjs-editable">
           <!-- First Slide -->
@@ -112,17 +117,21 @@
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss" class="carousel-control-prev gjs-draggable"><span id="izg80a" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv" class="carousel-control-next-icon"></span></button>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
+          class="carousel-control-prev gjs-draggable"><span id="izg80a"
+            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
+          data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
+            class="carousel-control-next-icon"></span></button>
       </div><!-- Bootstrap Carousel Ends Here -->
     </div>
   </div>
   <div id="footer" class="gjs-grid-row">
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
-        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv"
-            class="gjs-link-box"><img id="i48rvi" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
-        <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">Pricing<br/></a><a
-            id="ipjdtn" href="##" class="gjs-link">Terms &amp; Conditions<br/></a><a id="i2sl68" href="##"
+        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
+        <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">Pricing<br /></a><a
+            id="ipjdtn" href="##" class="gjs-link">Terms &amp; Conditions<br /></a><a id="i2sl68" href="##"
             class="gjs-link">
             <div id="i4mjli">
               <div>Contact Us</div>
