--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div data-type-role="flex-column" id="il6rqk-2" class="gjs-plg-flex-column"><video
                     allowfullscreen="allowfullscreen" id="imau5i-2" src="img/video2.webm" controls></video></div>
                 <div data-type-role="flex-column" id="isrxh2-2" class="gjs-plg-flex-column">
-                  <h3 id="iqpz9-2"><span id="isb9z6-2">Generative AI NPC Dialogue System</span></h3>
+                  <h3 id="iqpz9-2"><span id="isb9z6-2">Joystick Controller</span></h3>
                   <button type="button" id="i3lj1-2" class="btn btn-primary">View More</button>
                 </div>
               </div>
@@ -110,7 +110,7 @@
                 <div data-type-role="flex-column" id="il6rqk-3" class="gjs-plg-flex-column"><video
                     allowfullscreen="allowfullscreen" id="imau5i-3" src="img/video2.webm" controls></video></div>
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
-                  <h3 id="iqpz9-3"><span id="isb9z6-3">Generative AI NPC Dialogue System</span></h3>
+                  <h3 id="iqpz9-3"><span id="isb9z6-3">Orbital Mechanics Simulation</span></h3>
                   <button type="button" id="i3lj1-3" class="btn btn-primary">View More</button>
                 </div>
               </div>
