--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   </div>
                   <div id="if2j14">
                     <div id="iqr1l7">Deployed an API server on Render using the FastAPI framework, integrating an AI for
-                      immersive NPC dialogue systems compatible with any game engine</div>
+                      immersive NPC dialogue systems compatible with any game engine.</div>
                   </div><button type="button" id="i3lj1-2" class="btn btn-primary">View More</button>
                 </div>
               </div>
@@ -124,7 +124,8 @@
                           Simulation</span></strong></div>
                   </div>
                   <div id="i9j7vc">
-                    <div id="ie3ggj">Insert your text here</div>
+                    <div id="ie3ggj">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem
+                      and the use of the polar equation of 2-body orbits.</div>
                   </div><button type="button" id="i3lj1" class="btn btn-primary">View More</button>
                 </div>
               </div>
@@ -155,6 +156,7 @@
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 
 </html>
