--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo">
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -97,8 +97,9 @@
           <div id="iu6fa" class="carousel-item gjs-draggable">
             <div id="ic6ql" class="carousel-content">
               <div data-type-role="flex-row" id="imqvkv-2" class="gjs-plg-flex-row">
-                <div data-type-role="flex-column" id="il6rqk-2" class="gjs-plg-flex-column"><video
-                    allowfullscreen="allowfullscreen" id="imau5i-2" src="img/video2.webm" controls></video></div>
+                <div data-type-role="flex-column" id="il6rqk-2" class="gjs-plg-flex-column"><iframe
+                    allowfullscreen="allowfullscreen" id="imau5i-2" src="https://www.youtube.com/embed/gpotQWYRFac?"
+                    controls></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
                   <div id="i3oino">
                     <div id="i9bf5h"><strong><span id="i2561h"><span id="idbxhu">Joystick</span>
@@ -116,8 +117,9 @@
           <div id="i9eaj" class="carousel-item gjs-draggable">
             <div id="iu8l4" class="carousel-content">
               <div data-type-role="flex-row" id="imqvkv-3" class="gjs-plg-flex-row">
-                <div data-type-role="flex-column" id="il6rqk-3" class="gjs-plg-flex-column"><video
-                    allowfullscreen="allowfullscreen" id="imau5i-3" src="img/video2.webm" controls></video></div>
+                <div data-type-role="flex-column" id="il6rqk-3" class="gjs-plg-flex-column"><iframe
+                    allowfullscreen="allowfullscreen" id="imau5i-3" src="https://www.youtube.com/embed/k_mOLVYPUOQ?"
+                    controls></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2" class="gjs-plg-flex-column">
                   <div id="ifbf0k">
                     <div id="itxi99"><strong><span id="ia55fo"><span id="i7htxv">Orbital</span> Mechanics
@@ -135,7 +137,7 @@
           class="carousel-control-prev gjs-draggable"><span id="izg80a"
             class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
           data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
-            class="carousel-control-next-icon"></span></button>
+            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Bootstrap Carousel Ends Here -->
     </div>
   </div>
@@ -143,7 +145,7 @@
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
         <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" alt="afaz Title Logo"></a></div>
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">Pricing<br /></a><a
             id="ipjdtn" href="##" class="gjs-link">Terms &amp; Conditions<br /></a><a id="i2sl68" href="##"
             class="gjs-link">
@@ -156,6 +158,7 @@
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 
 
