change domain and update stuff

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
-            <div id="colnav" class="gjs-grid-column"><a id="i88iz" href="#testimonial-section" title=""
-                class="gjs-link">
+            <div id="colnav" class="gjs-grid-column"><a id="i88iz" href="#hero" title="" class="gjs-link">
                 <div id="Text">
-                  <div id="isaxis">About</div>
+                  <div id="isaxis">
+                    <div id="i5a69g">About</div>
+                  </div>
                 </div>
               </a><a id="i88iz-3" href="#past-projects" class="gjs-link">
                 <div id="ii6wfs">
@@ -34,9 +35,11 @@
                   </div>
                 </div>
               </a></div>
-            <div id="icyzp" class="gjs-grid-column"><a id="i88iz-2" href="#footer" class="gjs-link">
+            <div id="icyzp" class="gjs-grid-column"><a id="i88iz-2" href="#education" class="gjs-link">
                 <div id="ivh96e">
-                  <div>Education</div>
+                  <div id="iv7fa">
+                    <div id="ift0do">Education</div>
+                  </div>
                 </div>
               </a></div>
           </div>
@@ -47,8 +50,9 @@
   </div>
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
-      <h1 id="irjua" class="gjs-heading"><strong>Hey! I'm Firdaus </strong><span id="i4jn1p"
-          class="gjs-text-blue"><strong>Zaki</strong></span></h1>
+      <h1 id="irjua" class="gjs-heading">
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong>Zaki</strong></span>
+      </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
           <div id="ivm4u"><span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web
@@ -65,31 +69,38 @@
   </div>
   <div id="past-projects" class="gjs-grid-row">
     <div id="i8w4i" class="gjs-grid-column">
-      <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong>Past Projects</strong></h4>
-      <h2 id="iiacm" class="gjs-heading"><strong id="i0dv3">Here are some of my <span id="icxfor"
-            class="gjs-text-blue">Past Projects</span></strong></h2><!-- Bootstrap Carousel Starts Here -->
-      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable"><!-- Indicators -->
-        <div id="ittgu" class="carousel-indicators gjs-draggable"><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button"
-            data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button"
-            data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button></div><!-- Carousel Inner -->
-        <div id="ihh53" class="carousel-inner gjs-editable"><!-- First Slide -->
+      <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong id="i9zgf">Past Projects</strong></h4>
+      <h2 id="iiacm" class="gjs-heading">
+        <strong id="i0dv3">Here are some of my <span id="icxfor" class="gjs-text-blue">Past Projects</span></strong>
+      </h2><!-- Bootstrap Carousel Starts Here -->
+      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable">
+        <!-- Indicators -->
+        <div id="ittgu" class="carousel-indicators gjs-draggable">
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
+            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="2">Button</button>
+        </div><!-- Carousel Inner -->
+        <div id="ihh53" class="carousel-inner gjs-editable">
+          <!-- First Slide -->
           <div id="icyl7" class="carousel-item active gjs-draggable">
-            <div id="iac6f" class="carousel-content">
-              <div data-type-role="flex-row" id="imqvkv" class="gjs-plg-flex-row">
-                <div data-type-role="flex-column" id="il6rqk" class="gjs-plg-flex-column"><iframe
-                    allowfullscreen="allowfullscreen" id="imau5i"
+            <div id="iac6f-2" class="carousel-content">
+              <div data-type-role="flex-row" id="imqvkv-4" class="gjs-plg-flex-row">
+                <div data-type-role="flex-column" id="il6rqk-4" class="gjs-plg-flex-column"><iframe
+                    allowfullscreen="allowfullscreen" id="imau5i-4"
                     src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4" controls></iframe>
                 </div>
-                <div data-type-role="flex-column" id="isrxh2-2" class="gjs-plg-flex-column">
-                  <div id="iovv8o">
-                    <div id="i9fe2p"><strong><span id="iyjge1"><span id="i864xq">Generative</span> AI NPC Dialogue
-                          System</span></strong></div>
+                <div data-type-role="flex-column" id="isrxh2-2-2" class="gjs-plg-flex-column">
+                  <div id="iovv8o-2">
+                    <div id="i9fe2p-2">
+                      <strong><span id="iyjge1-2"><span id="i864xq-2">Generative</span> AI NPC Dialogue
+                          System</span></strong>
+                    </div>
                   </div>
-                  <div id="if2j14">
-                    <div id="iqr1l7">Deployed an API server on Render using the FastAPI framework, integrating an AI for
-                      immersive NPC dialogue systems compatible with any game engine.</div>
-                  </div><button type="button" id="i3lj1-2" class="btn btn-primary">View More</button>
+                  <div id="if2j14-2">
+                    <div id="iqr1l7-2">Deployed an API server on Render using the FastAPI framework, integrating an AI
+                      for immersive NPC dialogue systems compatible with any game engine.</div>
+                  </div><button type="button" id="i3lj1-2-2" class="btn btn-primary">View More</button>
                 </div>
               </div>
             </div>
@@ -102,8 +113,9 @@
                     controls></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
                   <div id="i3oino">
-                    <div id="i9bf5h"><strong><span id="i2561h"><span id="idbxhu">Joystick</span>
-                          Controller</span></strong></div>
+                    <div id="i9bf5h">
+                      <strong><span id="i2561h"><span id="idbxhu">Joystick</span> Controller</span></strong>
+                    </div>
                   </div>
                   <div id="iryk9n">
                     <div id="ie2hig">Built a joystick controller using various components found and connected them to an
@@ -122,8 +134,9 @@
                     controls></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2" class="gjs-plg-flex-column">
                   <div id="ifbf0k">
-                    <div id="itxi99"><strong><span id="ia55fo"><span id="i7htxv">Orbital</span> Mechanics
-                          Simulation</span></strong></div>
+                    <div id="itxi99">
+                      <strong><span id="ia55fo"><span id="i7htxv">Orbital</span> Mechanics Simulation</span></strong>
+                    </div>
                   </div>
                   <div id="i9j7vc">
                     <div id="ie3ggj">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem
@@ -133,12 +146,26 @@
               </div>
             </div>
           </div>
-        </div><!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
+        </div>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
           class="carousel-control-prev gjs-draggable"><span id="izg80a"
             class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
           data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
             title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Bootstrap Carousel Ends Here -->
+    </div>
+  </div>
+  <div id="education" class="gjs-grid-row">
+    <div id="i8w4i-2" class="gjs-grid-column">
+      <h4 id="ihs4lb-2" class="gjs-heading gjs-text-blue"><strong id="i2t6em">Education</strong></h4>
+      <h2 id="iiacm-2" class="gjs-heading">
+        <strong id="i0dv3-2">Below is an overview of my <span id="ihw7e5">Formal </span><span id="icxfor-2"
+            class="gjs-text-blue">Education</span></strong>
+      </h2>
+      <div id="iac6f" class="carousel-content">
+        <div data-type-role="flex-row" id="imqvkv" class="gjs-plg-flex-row"></div>
+      </div><!-- Bootstrap Carousel Starts Here -->
+      <!-- Bootstrap Carousel Ends Here -->
     </div>
   </div>
   <div id="footer" class="gjs-grid-row">
