--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg">
   <meta property="og:url" content="https://www.firdauszaki.com">
   <meta property="og:site_name" content="AFAZ | Portfolio">
+  <meta name="theme-color" content="#2463eb">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
