--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo">
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -76,7 +76,8 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong>Zaki</strong></span>
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong
+            id="i2miy">Zaki</strong></span>
       </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
@@ -113,14 +114,12 @@
               <div data-type-role="flex-row" id="imqvkv-4" class="gjs-plg-flex-row">
                 <div data-type-role="flex-column" id="il6rqk-4" class="gjs-plg-flex-column"><iframe
                     allowfullscreen="allowfullscreen" id="imau5i-4"
-                    src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4" controls></iframe>
+                    src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4" controls=""></iframe>
                 </div>
                 <div data-type-role="flex-column" id="isrxh2-2-2" class="gjs-plg-flex-column">
                   <div id="iovv8o-2">
-                    <div id="i9fe2p-2">
-                      <strong><span id="iyjge1-2"><span id="i864xq-2">Generative</span> AI NPC Dialogue
-                          System</span></strong>
-                    </div>
+                    <div id="i9fe2p-2"><strong><span id="iyjge1-2"><span id="i864xq-2">Generative</span> AI NPC Dialogue
+                          System</span></strong></div>
                   </div>
                   <div id="if2j14-2">
                     <div id="iqr1l7-2">Deployed an API server on Render using the FastAPI framework, integrating an AI
@@ -135,7 +134,7 @@
               <div data-type-role="flex-row" id="imqvkv-2" class="gjs-plg-flex-row">
                 <div data-type-role="flex-column" id="il6rqk-2" class="gjs-plg-flex-column"><iframe
                     allowfullscreen="allowfullscreen" id="imau5i-2" src="https://www.youtube.com/embed/gpotQWYRFac?"
-                    controls></iframe></div>
+                    controls=""></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
                   <div id="i3oino">
                     <div id="i9bf5h">
@@ -156,7 +155,7 @@
               <div data-type-role="flex-row" id="imqvkv-3" class="gjs-plg-flex-row">
                 <div data-type-role="flex-column" id="il6rqk-3" class="gjs-plg-flex-column"><iframe
                     allowfullscreen="allowfullscreen" id="imau5i-3" src="https://www.youtube.com/embed/k_mOLVYPUOQ?"
-                    controls></iframe></div>
+                    controls=""></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2" class="gjs-plg-flex-column">
                   <div id="ifbf0k">
                     <div id="itxi99">
@@ -197,19 +196,23 @@
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
         <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" alt="afaz Title Logo"></a></div>
-        <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">Pricing<br /></a><a
-            id="ipjdtn" href="##" class="gjs-link">Terms &amp; Conditions<br /></a><a id="i2sl68" href="##"
-            class="gjs-link">
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
+        <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">
+            <div>Discord</div>
+          </a><a id="ipjdtn" href="##" class="gjs-link">
+            <div>Instagram</div>
+          </a><a id="i2sl68" href="##" class="gjs-link">
             <div id="i4mjli">
-              <div>Contact Us</div>
+              <div id="ibdnek">
+                <div id="ir8r4y">Github</div>
+              </div>
             </div>
           </a></div>
       </div>
     </div>
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+</body>>
 
 
 
