--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:image" content="https://www.firdauszaki.com/preview.jpg">
   <meta property="og:url" content="https://www.firdauszaki.com">
   <meta property="og:site_name" content="AFAZ | Portfolio">
-  <meta name="theme-color" content="#2463eb">
+  <meta name="theme-color" content="#5797ff">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
@@ -187,7 +187,9 @@
             class="gjs-text-blue">Education</span></strong>
       </h2>
       <div id="iac6f" class="carousel-content">
-        <div data-type-role="flex-row" id="imqvkv" class="gjs-plg-flex-row"></div>
+        <div data-type-role="flex-row" class="gjs-plg-flex-row" id="iw7afe">
+          <div data-type-role="flex-column" class="gjs-plg-flex-column" id="i3mqhw"></div>
+        </div>
       </div><!-- Bootstrap Carousel Starts Here -->
       <!-- Bootstrap Carousel Ends Here -->
     </div>
@@ -212,7 +214,12 @@
     </div>
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>>
+  &gt;
+
+
+
+
+</body>
 
 
 
