--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -76,8 +76,7 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong
-            id="i2miy">Zaki</strong></span>
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
       </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
@@ -102,10 +101,7 @@
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable">
         <!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
-            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="2">Button</button>
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
         </div><!-- Carousel Inner -->
         <div id="ihh53" class="carousel-inner gjs-editable">
           <!-- First Slide -->
@@ -138,8 +134,7 @@
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
                   <div id="i3oino">
                     <div id="i9bf5h">
-                      <strong><span id="i2561h"><span id="idbxhu">Joystick</span> Controller</span></strong>
-                    </div>
+                      <strong><span id="i2561h"><span id="idbxhu">Joystick</span> Controller</span></strong></div>
                   </div>
                   <div id="iryk9n">
                     <div id="ie2hig">Built a joystick controller using various components found and connected them to an
@@ -171,11 +166,7 @@
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
-          class="carousel-control-prev gjs-draggable"><span id="izg80a"
-            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
-          data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
-            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss" class="carousel-control-prev gjs-draggable"><span id="izg80a" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv" title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Bootstrap Carousel Ends Here -->
     </div>
   </div>
@@ -183,22 +174,21 @@
     <div id="i8w4i-2" class="gjs-grid-column">
       <h4 id="ihs4lb-2" class="gjs-heading gjs-text-blue"><strong id="i2t6em">Education</strong></h4>
       <h2 id="iiacm-2" class="gjs-heading">
-        <strong id="i0dv3-2">Below is an overview of my <span id="ihw7e5">Formal </span><span id="icxfor-2"
-            class="gjs-text-blue">Education</span></strong>
+        <strong id="i0dv3-2">Below is an overview of my <span id="ihw7e5">Formal </span><span id="icxfor-2" class="gjs-text-blue">Education</span></strong>
       </h2>
       <div id="iac6f" class="carousel-content">
-        <div data-type-role="flex-row" class="gjs-plg-flex-row" id="iw7afe">
-          <div data-type-role="flex-column" class="gjs-plg-flex-column" id="i3mqhw"></div>
+        <div data-type-role="flex-row" id="iw7afe" class="gjs-plg-flex-row">
+          <div data-type-role="flex-column" id="i3mqhw" class="gjs-plg-flex-column"></div>
+          <!--image edu-->
         </div>
-      </div><!-- Bootstrap Carousel Starts Here -->
-      <!-- Bootstrap Carousel Ends Here -->
+      </div>
     </div>
   </div>
   <div id="footer" class="gjs-grid-row">
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
-        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
+        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv"
+            class="gjs-link-box"><img id="i48rvi" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">
             <div>Discord</div>
           </a><a id="ipjdtn" href="##" class="gjs-link">
