--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo">
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -192,7 +192,7 @@
             <div id="il0alf">
               <div id="iov1wd"><span id="ifzbe4"><strong id="ipot2i">Schule Höchi Dättwil</strong></span></div>
               <div draggable="true" id="ijal46">
-                <span draggable="true" id="ip7cyo"><strong draggable="true" id="im4r7c">( 2014 - 2019 )</strong></span>
+                <span draggable="true" id="ip7cyo"><strong draggable="true" id="im4r7c">( 2011 - 2013 )</strong></span>
               </div>
             </div>
           </div>
