--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div id="i5a69g">About</div>
                   </div>
                 </div>
-              </a><a id="i88iz-3" href="#past-projects" class="gjs-link">
+              </a><a id="past-p-ref" href="#past-projects" class="gjs-link">
                 <div id="ii6wfs">
                   <div id="in1bsu">
                     <div>Projects</div>
