--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
   </div>
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
-      <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong
-            id="i2miy">Zaki</strong></span>
-      </h1>
+      <h1 id="irjua" class="gjs-heading"><strong>Hey! I'm Firdaus </strong><span id="i4jn1p"
+          class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span></h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
           <div id="ivm4u"><span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web
@@ -96,19 +94,14 @@
   <div id="past-projects" class="gjs-grid-row">
     <div id="i8w4i" class="gjs-grid-column">
       <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong id="i9zgf">Past Projects</strong></h4>
-      <h2 id="iiacm" class="gjs-heading">
-        <strong id="i0dv3">Here are some of my <span id="icxfor" class="gjs-text-blue">Past Projects</span></strong>
-      </h2><!-- Bootstrap Carousel Starts Here -->
-      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable">
-        <!-- Indicators -->
-        <div id="ittgu" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
-            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="2">Button</button>
-        </div><!-- Carousel Inner -->
-        <div id="ihh53" class="carousel-inner gjs-editable">
-          <!-- First Slide -->
+      <h2 id="iiacm" class="gjs-heading"><strong id="i0dv3">Here are some of my <span id="icxfor"
+            class="gjs-text-blue">Past Projects</span></strong></h2><!-- Bootstrap Carousel Starts Here -->
+      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block"><!-- Indicators -->
+        <div id="ittgu" class="carousel-indicators gjs-draggable"><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button"
+            data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button"
+            data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button></div><!-- Carousel Inner -->
+        <div id="ihh53" class="carousel-inner gjs-editable"><!-- First Slide -->
           <div id="icyl7" class="carousel-item active gjs-draggable">
             <div id="iac6f-2" class="carousel-content">
               <div data-type-role="flex-row" id="imqvkv-4" class="gjs-plg-flex-row">
@@ -137,9 +130,8 @@
                     controls=""></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2-3" class="gjs-plg-flex-column">
                   <div id="i3oino">
-                    <div id="i9bf5h">
-                      <strong><span id="i2561h"><span id="idbxhu">Joystick</span> Controller</span></strong>
-                    </div>
+                    <div id="i9bf5h"><strong><span id="i2561h"><span id="idbxhu">Joystick</span>
+                          Controller</span></strong></div>
                   </div>
                   <div id="iryk9n">
                     <div id="ie2hig">Built a joystick controller using various components found and connected them to an
@@ -158,9 +150,8 @@
                     controls=""></iframe></div>
                 <div data-type-role="flex-column" id="isrxh2" class="gjs-plg-flex-column">
                   <div id="ifbf0k">
-                    <div id="itxi99">
-                      <strong><span id="ia55fo"><span id="i7htxv">Orbital</span> Mechanics Simulation</span></strong>
-                    </div>
+                    <div id="itxi99"><strong><span id="ia55fo"><span id="i7htxv">Orbital</span> Mechanics
+                          Simulation</span></strong></div>
                   </div>
                   <div id="i9j7vc">
                     <div id="ie3ggj">Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem
@@ -170,56 +161,47 @@
               </div>
             </div>
           </div>
-        </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
+        </div><!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
           class="carousel-control-prev gjs-draggable"><span id="izg80a"
             class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
           data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
             title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Bootstrap Carousel Ends Here -->
+
     </div>
   </div>
   <div id="education" class="gjs-grid-row">
     <div id="i8w4i-2" class="gjs-grid-column">
       <h4 id="ihs4lb-2" class="gjs-heading gjs-text-blue"><strong id="i2t6em">Education</strong></h4>
-      <h2 id="iiacm-2" class="gjs-heading">
-        <strong id="i0dv3-2">Below is an overview of my <span id="ihw7e5">Formal </span><span id="icxfor-2"
-            class="gjs-text-blue">Education</span></strong>
-      </h2>
+      <h2 id="iiacm-2" class="gjs-heading"><strong id="i0dv3-2">Below is an overview of my <span id="ihw7e5">Formal
+          </span><span id="icxfor-2" class="gjs-text-blue">Education</span></strong></h2>
       <div id="iac6f" class="carousel-content">
         <div data-type-role="flex-row" id="iw7afe" class="gjs-plg-flex-row">
           <div data-type-role="flex-column" id="i3mqhw-4" class="gjs-plg-flex-column">
             <div id="il0alf">
               <div id="iov1wd"><span id="ifzbe4"><strong id="ipot2i">Schule Höchi Dättwil</strong></span></div>
-              <div draggable="true" id="ijal46">
-                <span draggable="true" id="ip7cyo"><strong draggable="true" id="im4r7c">( 2011 - 2013 )</strong></span>
-              </div>
+              <div draggable="true" id="ijal46"><span draggable="true" id="ip7cyo"><strong draggable="true"
+                    id="im4r7c">( 2011 - 2013 )</strong></span></div>
             </div>
           </div>
-          <!--image edu-->
         </div>
         <div data-type-role="flex-row" id="iw7afe-4" class="gjs-plg-flex-row">
           <div data-type-role="flex-column" id="i3mqhw-4-2" class="gjs-plg-flex-column">
             <div id="il0alf-2">
               <div id="iov1wd-2"><span id="i85as3-2"><strong id="ih6i3f-2">SK Seksyen 9 Shah Alam</strong></span></div>
-              <div draggable="true" id="ijyrsh">
-                <span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019
-                    )</strong></span>
-              </div>
+              <div draggable="true" id="ijyrsh"><span draggable="true" id="ip7cyo-2"><strong draggable="true"
+                    id="im4r7c-2">( 2014 - 2019 )</strong></span></div>
             </div>
           </div>
-          <!--image edu-->
         </div>
         <div data-type-role="flex-row" id="iw7afe-3" class="gjs-plg-flex-row">
           <div data-type-role="flex-column" id="i3mqhw-3" class="gjs-plg-flex-column">
             <div id="i07hta">
               <div id="idcp5i"><span id="ignmm5"><strong id="iw1l7b">MRSM Langkawi</strong></span></div>
-              <div draggable="true" id="ikqbj6">
-                <span draggable="true" id="iq3im1"><strong draggable="true" id="i4l4ob">( 2020 - 2024 )</strong></span>
-              </div>
+              <div draggable="true" id="ikqbj6"><span draggable="true" id="iq3im1"><strong draggable="true"
+                    id="i4l4ob">( 2020 - 2024 )</strong></span></div>
             </div>
           </div>
-          <!--image edu-->
         </div>
       </div>
     </div>
@@ -245,6 +227,8 @@
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   &gt;
+
+
 
 
 
