--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <div id="i8w4i" class="gjs-grid-column">
       <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong id="i9zgf">Past Projects</strong></h4>
       <h2 id="iiacm" class="gjs-heading"><strong id="i0dv3">Here are some of my <span id="icxfor"
-            class="gjs-text-blue">Past Projects</span></strong></h2><!-- Bootstrap Carousel Starts Here -->
+            class="gjs-text-blue">Past Projects</span></strong></h2><!--Desktop Carousel Starts Here-->
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block"><!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable"><button type="button" data-bs-target="#customCarousel"
             data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button"
@@ -166,7 +166,9 @@
             class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
           data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
             title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
-      </div><!-- Bootstrap Carousel Ends Here -->
+      </div><!-- Desktop Carousel Ends Here -->
+
+      
 
     </div>
   </div>
