--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
       <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong id="i9zgf">Past Projects</strong></h4>
       <h2 id="iiacm" class="gjs-heading"><strong id="i0dv3">Here are some of my <span id="icxfor"
             class="gjs-text-blue">Past Projects</span></strong></h2><!--Desktop Carousel Starts Here-->
-      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block"><!-- Indicators -->
+      <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
+        <!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable"><button type="button" data-bs-target="#customCarousel"
             data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button"
             data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button"
@@ -168,7 +169,44 @@
             title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Desktop Carousel Ends Here -->
 
-      
+      <!-- Mobile/Tablet Carousel (Cards) Starts Here -->
+      <div id="customCardCarousel" class="d-lg-none mt-4">
+        <div class="card-carousel-container">
+          <div class="card-carousel">
+            <!-- First Card -->
+            <div class="card">
+              <iframe allowfullscreen
+                src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4"></iframe>
+              <div class="card-body">
+                <h5 class="card-title">Generative AI NPC Dialogue System</h5>
+                <p class="card-text">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC
+                  dialogue in any game engine.</p>
+                <a href="#" class="btn btn-primary">View More</a>
+              </div>
+            </div>
+            <!-- Second Card -->
+            <div class="card">
+              <iframe allowfullscreen src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
+              <div class="card-body">
+                <h5 class="card-title">Joystick Controller</h5>
+                <p class="card-text">Built a joystick controller using Arduino Mega and connected components,
+                  communicating with software via JSON or simulated inputs.</p>
+                <a href="#" class="btn btn-primary">View More</a>
+              </div>
+            </div>
+            <!-- Third Card -->
+            <div class="card">
+              <iframe allowfullscreen src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
+              <div class="card-body">
+                <h5 class="card-title">Orbital Mechanics Simulation</h5>
+                <p class="card-text">Developed an orbital mechanics simulation in...</p>
+                <a href="#" class="btn btn-primary">View More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </div>
